update header, footer structure; tweak html and css

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,9 +5,13 @@
     {%- assign page_paths = site.header_pages | default: default_paths -%}
     <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
 
+    <!--{%- include social.html -%}-->
+
     {%- if page_paths -%}
       <nav class="site-nav">
+        <!--This is the drawer trigger for the hamburger menu-->
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
+        <!--This is the hamburger menu-->
         <label for="nav-trigger">
           <span class="menu-icon">
             <svg viewBox="0 0 18 15" width="18px" height="15px">
@@ -16,6 +20,7 @@
           </span>
         </label>
 
+        <!--This is the normal link list menu-->
         <div class="trigger">
           {%- for path in page_paths -%}
             {%- assign my_page = site.pages | where: "path", path | first -%}
@@ -23,6 +28,8 @@
             <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
             {%- endif -%}
           {%- endfor -%}
+          <a class="page-link" href="https://github.com/samwessley" target="_blank">github</a>
+          <a class="page-link" href="mailto: samwessley@gmail.com" target="_blank">contact</a>
         </div>
       </nav>
     {%- endif -%}
