--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -2,8 +2,8 @@
  * Site header
  */
 .site-header {
-  border-top: 5px solid $grey-color-dark;
-  border-bottom: 1px solid $grey-color-light;
+  //border-top: 5px solid $grey-color-dark;
+  //border-bottom: 1px solid $grey-color-light;
   min-height: $spacing-unit * 1.865;
 
   // Positioning context for the mobile navigation icon
@@ -12,7 +12,7 @@
 
 .site-title {
   @include relative-font-size(1.625);
-  font-weight: 300;
+  font-weight: 800;
   line-height: $base-line-height * $base-font-size * 2.25;
   letter-spacing: -1px;
   margin-bottom: 0;
@@ -39,6 +39,7 @@
   .page-link {
     color: $text-color;
     line-height: $base-line-height;
+    text-transform: lowercase;
 
     // Gaps between nav items, but not on the last one
     &:not(:last-child) {
@@ -51,8 +52,8 @@
     top: 9px;
     right: $spacing-unit / 2;
     background-color: $background-color;
-    border: 1px solid $grey-color-light;
-    border-radius: 5px;
+    //border: 1px solid $grey-color-light;
+    //border-radius: 5px;
     text-align: right;
 
     label[for="nav-trigger"] {
@@ -91,6 +92,7 @@
     .page-link {
       display: block;
       padding: 5px 10px;
+      text-transform: lowercase;
 
       &:not(:last-child) {
         margin-right: 0;
