--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,8 +28,7 @@
             <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
             {%- endif -%}
           {%- endfor -%}
-          <a class="page-link" href="https://github.com/samwessley" target="_blank">github</a>
-          <a class="page-link" href="mailto: samwessley@gmail.com" target="_blank">contact</a>
+          <a class="page-link" href="https://github.com/samwessley" target="_blank">github</a><a class="page-link" href="mailto: samwessley@gmail.com" target="_blank">contact</a>
         </div>
       </nav>
     {%- endif -%}
