--- a/assets/main.scss
+++ b/assets/main.scss
@@ -10,10 +10,12 @@ body {
 
 p {
     font-size: 18px;
+    font-weight: 300;
+    line-height: 1.6em;
 }
 
 .wrapper {
-    max-width: 640px;
+    max-width: 600px;
 }
 
 .site-header {
