--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,10 +25,10 @@
           {%- for path in page_paths -%}
             {%- assign my_page = site.pages | where: "path", path | first -%}
             {%- if my_page.title -%}
-            <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+            <a class="page-link" id="{{ my_page.title | escape }}" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
             {%- endif -%}
           {%- endfor -%}
-          <a class="page-link" href="https://github.com/samwessley" target="_blank">github</a><a class="page-link" href="mailto: samwessley@gmail.com" target="_blank">contact</a>
+          <a class="page-link" id="github" href="https://github.com/samwessley" target="_blank">github</a><a class="page-link" id="contact" href="mailto: samwessley@gmail.com" target="_blank">contact</a>
         </div>
       </nav>
     {%- endif -%}
