--- a/assets/main.scss
+++ b/assets/main.scss
@@ -15,13 +15,17 @@ p {
 }
 
 .post-link,
-.post-link:visited {
-    color: #222;
+.post-title {
+    margin: 0;
+    font-size: 24px;
+    line-height: 2em;
+    font-variant: normal;
+    letter-spacing: 0;
 }
 
-.post-title,
-.post-link {
-    font-size: 24px;
+.post-link,
+.post-link:visited {
+    color: #222;
 }
 
 .post-link:hover {
@@ -121,7 +125,9 @@ img + em {
 
 .post-meta {
     display: block;
+    margin: 0;
     margin-bottom: 20px;
+    font-weight: 300;
 }
 
 .post-list li {
@@ -155,5 +161,6 @@ img + em {
         float: none;
         display: block;
         line-height: 20px;
+        font-size: 14px;
     }
 }
