--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -28,6 +28,7 @@ layout: default
         {%- if site.show_excerpts -%}
           {{ post.excerpt }}
         {%- endif -%}
+        <a class="read-more" href="{{ post.url | relative_url }}">read more</a>
       </li>
       {%- endfor -%}
     </ul>
