--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,7 @@
   {% seo title=false %}
   <title>Sam Wessley</title>
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+  <link rel="shortcut icon" type="image/png" href="favicon.png">
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
