--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -85,6 +85,7 @@ li {
   > ul,
   > ol {
     margin-bottom: 0;
+    font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
   }
 }
 
